--- a/src/app/pages/prices-page/prices-page.component.html
+++ b/src/app/pages/prices-page/prices-page.component.html
@@ -107,9 +107,50 @@
                     <!--/.Panel-->
                 </div>
                 <!--Grid column-->
-
             </div>
             <!--Grid row-->
+
+            <br>
+            <!--Section heading-->
+            <h1 class="section-heading pt-4">{{ 'TEXTS.PRICING_ADDITIONAL' | translate }}</h1>
+            <!--Section description-->
+            <p class="section-description">
+                {{ 'TEXTS.PRICING_LIST_POSITION' | translate }}
+            </p>
+            <!--Grid row-->
+            <div class="col">
+                <div class="row">
+                    <!--Grid column-->
+                    <div class="col-4"></div>
+                    <div class="col-lg-4 col-md-12 mb-r">
+                        <!--Panel-->
+                        <div class="price-color card text-center pricing-card align-items-center py-3 px-3 grey lighten-4 wow fadeInUp indigo-gradient">
+                            <h5 class="card-title">
+                                <strong>Premium</strong>
+                            </h5>
+                            <div class="price pt-0">
+                                <h2>10</h2>
+                            </div>
+                            <ul class="striped ">
+                                <li>
+                                    <p>{{ 'TEXTS.PRICING_FIRST_POSITION' | translate }}</p>
+                                </li>
+                                <li>
+                                    <p>{{ 'TEXTS.PRICING_MORE_ATTENTION' | translate }}</p>
+                                </li>
+                                <li>
+                                    <p>{{ 'TEXTS.PRICING_CANCEL' | translate }}</p>
+                                </li>
+                            </ul>
+                            <div class="flex-row ">
+                                <a class="btn btn-indigo darken-2 waves-light " id="button_abo_premium" mdbRippleRadius>{{ 'BUTTONS.ABO' | translate }}</a>
+                            </div>
+                        </div>
+                        <!--/.Panel-->
+                        <div class="col-4"></div>
+                    </div>
+                </div>
+            </div>
 
         </section>
         <!--Section: Pricing v.2-->
