--- a/src/app/pages/photographer-search-page/photographer-search-page.component.scss
+++ b/src/app/pages/photographer-search-page/photographer-search-page.component.scss
@@ -9,8 +9,8 @@
 
 .content-img {
   border-radius: 50%;
-  height: 30px;
-  width: 30px;
+  height: 40px;
+  width: 40px;
   margin-top: 5px;
   margin-bottom: 5px;
 }
@@ -60,4 +60,8 @@
   text-align: center;
   margin-top: 3px;
   margin-bottom: 5px;
+}
+
+.fa-map-marker {
+  vertical-align: middle;
 }
