--- a/src/app/pages/photographer-search-page/photographer-search-page.component.html
+++ b/src/app/pages/photographer-search-page/photographer-search-page.component.html
@@ -8,7 +8,7 @@
       <div class="scrollable">
         <div *ngFor="let p of (photographer | async)">
           <div *ngIf="p.premium == true">
-            <a routerLink="/photographer/test">
+            <a routerLink="/photographer/{{p.profileUrl}}">
               <div class="card">
                 <div class="card-body">
                   <p class="name">{{ p.name }}</p>
@@ -31,7 +31,7 @@
         <hr class="mt-4 mb-4 border">
         <div *ngFor="let p of (photographer | async)">
           <div *ngIf="p.premium == false">
-            <a routerLink="/photographer/test">
+            <a routerLink="/photographer/{{p.profileUrl}}">
               <div class="card">
                 <div class="card-body">
                   <p class="name">{{ p.name }}</p>
@@ -72,7 +72,7 @@
                   <br> Tel: {{ p.phone }}
                   <br>
                 </div>
-                <a routerLink="">Profile</a>
+                <a routerLink="/photographer/{{p.profileUrl}}">Profile</a>
               </div>
             </ng-template>
           </agm-snazzy-info-window>
