--- a/src/app/pages/photographer-page/photographer-page.component.html
+++ b/src/app/pages/photographer-page/photographer-page.component.html
@@ -28,8 +28,8 @@
         <div id="authorData" class=" col-12 col-sm-9">
           <p>{{photographer?.about}}</p>
           <p id="address">
-            <b>{{photographer?.address.street}} {{photographer?.address.streetnumber}}
-              <br/> {{photographer?.address.zip}} {{photographer?.address.city}}</b>
+            <b>{{photographer?.address?.street}} {{photographer?.address?.streetnumber}}
+              <br/> {{photographer?.address?.zip}} {{photographer?.address?.city}}</b>
           </p>
         </div>
       </div>
@@ -98,3 +98,4 @@
     </div>
     <!--END author-box element-->
   </div>
+</div>
