try to fix build errors

--- a/src/app/pages/data-protection-page/data-protection-page.component.html
+++ b/src/app/pages/data-protection-page/data-protection-page.component.html
@@ -121,13 +121,13 @@
             einer Datenerhebung und -speicherung Ihrer Besucherdaten f&uuml;r die Zukunft zu widersprechen, k&ouml;nnen Sie
             unter nachfolgendem Link ein Opt-Out-Cookie von etracker beziehen, dieser bewirkt, dass zuk&uuml;nftig keine
             Besucherdaten Ihres Browsers bei etracker erhoben und gespeichert werden:
-            <a href="http://www.etracker.de/privacy?et=V23Jbb">http://www.etracker.de/privacy?et=V23Jbb</a>
+            <a href="https://www.etracker.de/privacy?et=V23Jbb">https://www.etracker.de/privacy?et=V23Jbb</a>
           </p>
           <p>
             Dadurch wird ein Opt-Out-Cookie mit dem Namen "cntcookie" von etracker gesetzt. Bitte l&ouml;schen Sie diesen Cookie nicht,
             solange Sie Ihren Widerspruch aufrecht erhalten m&ouml;chten. Weitere Informationen finden Sie in den Datenschutzbestimmungen
             von etracker:
-            <a href="http://www.etracker.com/de/datenschutz.html">http://www.etracker.com/de/datenschutz.html</a>
+            <a href="https://www.etracker.com/de/datenschutz.html">https://www.etracker.com/de/datenschutz.html</a>
           </p>
           <p>&nbsp;</p>
           <h2>Facebook-Plugins (Like-Button)</h2>
@@ -135,8 +135,8 @@
             California 94025, USA, integriert. Die Facebook-Plugins erkennen Sie an dem Facebook-Logo oder dem "Like-Button"
             ("Gef&auml;llt mir") auf unserer Seite. Eine &Uuml;bersicht &uuml;ber die Facebook-Plugins finden Sie hier:
             <a
-              href="http://developers.facebook.com/docs/plugins/">
-              http://developers.facebook.com/docs/plugins/</a>.</p>
+              href="https://developers.facebook.com/docs/plugins/">
+              https://developers.facebook.com/docs/plugins/</a>.</p>
           <p>Wenn Sie unsere Seiten besuchen, wird &uuml;ber das Plugin eine direkte Verbindung zwischen Ihrem Browser und dem
             Facebook-Server hergestellt. Facebook erh&auml;lt dadurch die Information, dass Sie mit Ihrer IP-Adresse unsere
             Seite besucht haben. Wenn Sie den Facebook "Like-Button" anklicken w&auml;hrend Sie in Ihrem Facebook- Account
@@ -144,7 +144,7 @@
             Facebook den Besuch unserer Seiten Ihrem Benutzerkonto zuordnen. Wir weisen darauf hin, dass wir als Anbieter
             der Seiten keine Kenntnis vom Inhalt der &uuml;bermittelten Daten sowie deren Nutzung durch Facebook erhalten.
             Weitere Informationen hierzu finden Sie in der Datenschutzerkl&auml;rung von Facebook unter
-            <a href="http://de-de.facebook.com/policy.php">http://de- de.facebook.com/policy.php
+            <a href="https://de-de.facebook.com/policy.php">https://de- de.facebook.com/policy.php
             </a>.</p>
           <p>Wenn Sie nicht w&uuml;nschen, dass Facebook den Besuch unserer Seiten Ihrem Facebook-Nutzerkonto zuordnen kann,
             loggen Sie sich bitte aus Ihrem Facebook- Benutzerkonto aus.</p>
@@ -156,11 +156,11 @@
             anderen Nutzern bekannt gegeben. Dabei werden auch Daten an Twitter &uuml;bertragen. Wir weisen darauf hin, dass
             wir als Anbieter der Seiten keine Kenntnis vom Inhalt der &uuml;bermittelten Daten sowie deren Nutzung durch
             Twitter erhalten. Weitere Informationen hierzu finden Sie in der Datenschutzerkl&auml;rung von Twitter unter
-            <a href="http://twitter.com/privacy">
-              http://twitter.com/privacy</a>.</p>
+            <a href="https://twitter.com/privacy">
+              https://twitter.com/privacy</a>.</p>
           <p>Ihre Datenschutzeinstellungen bei Twitter k&ouml;nnen Sie in den Konto-Einstellungen unter:
-            <a href="http://twitter.com/account/settings">
-              http://twitter.com/account/settings</a> &auml;ndern.</p>
+            <a href="https://twitter.com/account/settings">
+              https://twitter.com/account/settings</a> &auml;ndern.</p>
           <p>&nbsp;</p>
           <h2>Google+</h2>
           <p>Unsere Seiten nutzen Funktionen von Google+. Anbieter ist die Google Inc., 1600 Amphitheatre Parkway Mountain View,
@@ -194,7 +194,7 @@
             Instagram erhalten.</p>
           <p>
             Weitere Informationen hierzu finden Sie in der Datenschutzerkl&auml;rung von Instagram:
-            <a href="http://instagram.com/about/legal/privacy/">http://instagram.com/about/legal/privacy/</a>
+            <a href="https://instagram.com/about/legal/privacy/">https://instagram.com/about/legal/privacy/</a>
           </p>
           <p>
             &nbsp;</p>
@@ -245,8 +245,8 @@
             der Daten, die Tumblr mit Hilfe dieses Plugins erhebt und &uuml;bermittelt. Nach aktuellem Stand werden die IP-Adresse
             des Nutzers sowie die URL der jeweiligen Webseite &uuml;bermittelt.</p>
           <p>Weitere Informationen hierzu finden sich in der Datenschutzerkl&auml;rung von Tumblr unter:
-            <a href="http://www.tumblr.com/policy/de/privacy">
-              http://www.tumblr.com/policy/de/privacy</a>.</p>
+            <a href="https://www.tumblr.com/policy/de/privacy">
+              https://www.tumblr.com/policy/de/privacy</a>.</p>
           <p>&nbsp;</p>
           <h2>YouTube</h2>
           <p>Unsere Webseite nutzt Plugins der von Google betriebenen Seite YouTube. Betreiber der Seiten ist die YouTube, LLC,
@@ -268,7 +268,7 @@
           <h2>SSL-Verschl&uuml;sselung</h2>
           <p>Diese Seite nutzt aus Gr&uuml;nden der Sicherheit und zum Schutz der &Uuml;bertragung vertraulicher Inhalte, wie
             zum Beispiel der Anfragen, die Sie an uns als Seitenbetreiber senden, eine SSL-Verschl&uuml;sselung. Eine verschl&uuml;sselte
-            Verbindung erkennen Sie daran, dass die Adresszeile des Browsers von &quot;http://&quot; auf &quot;https://&quot;
+            Verbindung erkennen Sie daran, dass die Adresszeile des Browsers von &quot;https://&quot; auf &quot;https://&quot;
             wechselt und an dem Schloss-Symbol in Ihrer Browserzeile.
           </p>
           <p>Wenn die SSL Verschl&uuml;sselung aktiviert ist, k&ouml;nnen die Daten, die Sie an uns &uuml;bermitteln, nicht
