--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -3,7 +3,7 @@
 <div id="header" class="header">
     <div class="container" >
         <div class="row justify-content-center">
-            <div class="col-6  text-center"> 
+            <div class="col-6  text-center">
                 <h1>EventPickKing </h1>
                 <br>
                 <h5>Willkommen bei ihrem Spezialisten für Event-Fotografie</h5>
@@ -17,11 +17,11 @@
             </div> <!--col1-end-->
 
             <!-- <div class="col-lg-6 col-md-6">
-                <img src="http://www.jeffreythompson.org/blog/wp-content/uploads/2012/07/DesktopWallpaperByChrisJaurique-web.png)" alt="" class="pull-left">                   
+                <img src="https://www.jeffreythompson.org/blog/wp-content/uploads/2012/07/DesktopWallpaperByChrisJaurique-web.png)" alt="" class="pull-left">
             </div> col2-end -->
         </div> <!--row-end-->
     </div> <!--container-end-->
-</div> 
+</div>
 <!--Header-end-->
 
 <div id ="description" class="description">
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-</div> 
+</div>
 <!--Description-end-->
 
 <!--Best Picture Section: Shows best rated pictures -->
@@ -49,32 +49,32 @@
             <h2>{{'TEXTS.LANDING_BESTPICTURES' | translate}}</h2>
             <p class="text-center">
                 Professionelle Bilder von Professionellen Fotografen. Finden Auch sie den perfekten Fotografen für ihr Event!
-            </p>            
+            </p>
      </div>  <!-- end-container -->
      <div class="container card">
          <div class="card-body gallery-frame">
                 <div class="col-md-12">
                 <div class="row">
                 <hr>
-                
+
                     <div class="gal">
 
-                        <div class="subtitle">                   
-                        <img class src="https://nadjaosieka.de/wp-content/uploads/2016/05/Fotobox-Loerrach-Basel-Fotograf-705x470.jpg" alt="">                              
+                        <div class="subtitle">
+                        <img class src="https://nadjaosieka.de/wp-content/uploads/2016/05/Fotobox-Loerrach-Basel-Fotograf-705x470.jpg" alt="">
                         <span>
                                 <i class="fa fa-heart" aria-hidden="true">  300</i>
                             </span>
                         </div>
-                    
-                        <div class="subtitle"> 
+
+                        <div class="subtitle">
                         <img src="https://preview.ibb.co/mWpE3Q/2.jpg" alt="">
                         <span>
                             <i class="fa fa-heart" aria-hidden="true">  300</i>
                         </span>
                         </div>
-                        
+
                             <div class="subtitle">
-                            <img src="http://radiient.com/c/geraumiges-tolles-hochzeitsdeko-tisch-hochzeit-dekoration-tisch-comforafrica.jpg" alt="">
+                            <img src="https://radiient.com/c/geraumiges-tolles-hochzeitsdeko-tisch-hochzeit-dekoration-tisch-comforafrica.jpg" alt="">
                             <span>
                                     <i class="fa fa-heart" aria-hidden="true">  300</i>
                                 </span>
@@ -84,8 +84,8 @@
                             <img src="https://preview.ibb.co/mysOxk/3.jpg" alt="">
                             <span>300 Likes</span>
                             </div>
-                            
-                            
+
+
                             <div class="subtitle">
                             <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
                             <span>
@@ -99,8 +99,8 @@
                                         <i class="fa fa-heart" aria-hidden="true">  300</i>
                                     </span>
                                 </div>
-                            
-                            <div class="subtitle">    
+
+                            <div class="subtitle">
                             <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
                             <span>
                                     <i class="fa fa-heart" aria-hidden="true">  300</i>
@@ -108,21 +108,21 @@
                             </div>
 
 
-                                <div class="subtitle">    
+                                <div class="subtitle">
                                 <img src="https://preview.ibb.co/mysOxk/3.jpg" alt="">
                                 <span>
                                         <i class="fa fa-heart" aria-hidden="true">  300</i>
                                     </span>
                                 </div>
 
-                                <div class="subtitle">    
-                                <img src="http://radiient.com/c/geraumiges-tolles-hochzeitsdeko-tisch-hochzeit-dekoration-tisch-comforafrica.jpg" alt="">
+                                <div class="subtitle">
+                                <img src="https://radiient.com/c/geraumiges-tolles-hochzeitsdeko-tisch-hochzeit-dekoration-tisch-comforafrica.jpg" alt="">
                                 <span>
                                     <i class="fa fa-heart" aria-hidden="true">  300</i>
                                 </span>
                                 </div>
 
-                                <div class="subtitle">    
+                                <div class="subtitle">
                                 <img src="https://www.curt.de/nbg/images/thumbs/450_news_news_2014_buntes_treiben_das_holi_festival_web_holi_c_steffenoliverriese.jpg" alt="">
                                 <span>
                                         <i class="fa fa-heart" aria-hidden="true">  300</i>
@@ -136,49 +136,49 @@
                                     </span>
                                 </div>
 
-                                <div class="subtitle">    
-                                <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-                                <span>
-                                        <i class="fa fa-heart" aria-hidden="true">  300</i>
-                                    </span>
-                                </div>
-                                
-                                <div class="subtitle">  
+                                <div class="subtitle">
                                 <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
                                 <span>
                                         <i class="fa fa-heart" aria-hidden="true">  300</i>
                                     </span>
                                 </div>
 
-                                <div class="subtitle">  
+                                <div class="subtitle">
+                                <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+                                <span>
+                                        <i class="fa fa-heart" aria-hidden="true">  300</i>
+                                    </span>
+                                </div>
+
+                                <div class="subtitle">
                                 <img src="https://www.curt.de/nbg/images/thumbs/450_news_news_2014_buntes_treiben_das_holi_festival_web_holi_c_steffenoliverriese.jpg" alt="">
                                 <span>
                                         <i class="fa fa-heart" aria-hidden="true">  300</i>
                                     </span>
                                 </div>
 
-                                    <div class="subtitle">  
-                                    <img src="http://radiient.com/c/geraumiges-tolles-hochzeitsdeko-tisch-hochzeit-dekoration-tisch-comforafrica.jpg" alt="">
+                                    <div class="subtitle">
+                                    <img src="https://radiient.com/c/geraumiges-tolles-hochzeitsdeko-tisch-hochzeit-dekoration-tisch-comforafrica.jpg" alt="">
                                     <span>
                                             <i class="fa fa-heart" aria-hidden="true">  300</i>
                                         </span>
                                     </div>
 
-                                        <div class="subtitle">  
+                                        <div class="subtitle">
                                         <img src="https://preview.ibb.co/mysOxk/3.jpg" alt="">
                                         <span>
                                                 <i class="fa fa-heart" aria-hidden="true">  300</i>
                                             </span>
                                         </div>
 
-                                        <div class="subtitle">  
+                                        <div class="subtitle">
                                         <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
                                         <span>
                                                 <i class="fa fa-heart" aria-hidden="true">  300</i>
                                             </span>
                                         </div>
                     </div>
-                    
+
                 </div>
                 </div>
          </div> <!--end-card-body-->
@@ -194,7 +194,7 @@
                 <p class="text-center">Egal ob Fotograf, Gast oder Organisator einer Veranstaltung - Wir unterstützen sie und garantieren maximale Zufriedenheit.
                     Überzeugen sie sich selbst!
                 </p>
-            <div class="row">           
+            <div class="row">
                 <div class="col-md-4 mb-r">
                      <div class="avatar">
                         <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(8).jpg" class="rounded-circle z-depth-1 img-fluid" alt="">
@@ -211,7 +211,7 @@
                         <i class="fa fa-star"> </i>
                     </div><!--review1-end-->
                 </div> <!--col1-end-->
-    
+
                 <div class="col-md-4 mb-r">
                     <div class="avatar">
                         <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="rounded-circle z-depth-1 img-fluid" alt="">
@@ -230,11 +230,11 @@
                             <i class="fa fa-star"> </i>
                         </div><!--review2-end-->
                     </div> <!--col2-end-->
-    
+
                     <div class="col-md-4 mb-r">
                         <div class="avatar">
                             <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(1).jpg" class="rounded-circle z-depth-1 img-fluid" alt="">
-                        </div> 
+                        </div>
                             <h4 class="mb-3">Marianne Faust</h4>
                             <h6 class="mb-3 font-bold grey-text">{{'LABELS.EVENT_GUEST'|translate}}</h6>
                             <p><i class="fa fa-quote-left"></i>Schöne Bilder von der Hochzeit meiner Cousine in Darmstadt-Wixhausen. Fotos sind einfach zu
