--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -3,7 +3,7 @@
     <div>
       <p class="four-size">
         <strong>4</strong>
-        <img class="lessMargin" src="http://www.freeiconspng.com/uploads/showing-gallery-for-camera-lens-png-clipart-10.png" width="150px"
+        <img class="lessMargin" src="https://www.freeiconspng.com/uploads/showing-gallery-for-camera-lens-png-clipart-10.png" width="150px"
           alt="O">
         <strong>4</strong>
       </p>
