--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -7,7 +7,7 @@ body{
     overflow: hidden;
     font-family: 'Open Sans', 'sans-serif';
     text-rendering: optimizeLegibility !important;
-    -webkit-font-smoothing: antialiased !important;       
+    -webkit-font-smoothing: antialiased !important;
 }
 
 
@@ -37,7 +37,7 @@ h4{
 
 p{
     font-size: 15px;
-    font-weight: 21px; 
+    font-weight: 21px;
 }
 
 .fa-heart{
@@ -79,8 +79,8 @@ p{
     width: 100%;
     padding: 120px 0px 30px;
     margin-top: 50px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), 
-    url('http://ebusinesshoy.com/wp-content/uploads/2016/06/Instagram_perfiles_negocios_ebusinesshoy.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
+    url('https://ebusinesshoy.com/wp-content/uploads/2016/06/Instagram_perfiles_negocios_ebusinesshoy.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -124,7 +124,7 @@ p{
     .header{
         padding: 30px;
         height: 750px;
-   
+
 
         img{
         width: 90%;
@@ -135,7 +135,7 @@ p{
         btn{
         font-size: 10px;
         margin-left: 20px;
-       
+
         }
 
         button{
@@ -169,31 +169,31 @@ p{
 
 
 
-//GALLERY  
+//GALLERY
 .gallery-frame{
     height:500px;
     overflow-y: auto;
-}            
+}
 
 .gallery{
     padding: 80px 0 80px;
     text-align: center;
     background-color: white;
-    
+
     h2,
     h4{
         color: #4c4c4c;
         margin: 20px 0 20px;
     }
-    
+
     p{
         color: #737373;
         font-size:14px;
         padding-bottom: 40px;
     }
 
-    img{ 
-        width: 100%; 
+    img{
+        width: 100%;
         padding: 7px 0;
     }
 
@@ -202,7 +202,7 @@ p{
 .gal {
 	-webkit-column-count: 3; /* Chrome, Safari, Opera */
     -moz-column-count: 3; /* Firefox */
-    column-count: 3;	  	 
+    column-count: 3;
 }
 
 @media (max-width: 500px) {
@@ -245,14 +245,14 @@ p{
 //FILLER
 .filler{
     padding: 80px 0 80px;
-    background-color: rgb(173, 194, 236);; 
+    background-color: rgb(173, 194, 236);;
     color: #fff;
 }
 
 // TESTIMONIAL
 .testimonial{
     padding: 80px 0 80px;
-    text-align: center;    
+    text-align: center;
 
     b,
     h2,
