--- a/src/app/components/event-user/event-user.component.html
+++ b/src/app/components/event-user/event-user.component.html
@@ -15,11 +15,11 @@
       <div class="row no-gutters justify-content-start" style="align-items: center">
 
         <div class="col-3">
-          <a class="btn btn-indigo darken-2 waves-light" id="button_select_all_pictures" mdbRippleRadius>{{ 'BUTTONS.SELECT_PICTURES' | translate }}</a>
+          <a class="btn btn-indigo darken-2 waves-light" id="button_select_all_pictures" (click)="selectAllImages()" mdbRippleRadius>{{ 'BUTTONS.SELECT_PICTURES' | translate }}</a>
         </div>
 
         <div class="col-4">
-          <a class="btn btn-indigo darken-2 waves-light" id="button_add_choosen_to_card" mdbRippleRadius>{{ 'BUTTONS.ADD_PICTURES_TO_CARD' | translate }}</a>
+          <a class="btn btn-indigo darken-2 waves-light" id="button_add_choosen_to_card" (click)="addImagesToCart()" mdbRippleRadius>{{ 'BUTTONS.ADD_PICTURES_TO_CART' | translate }}</a>
         </div>
 
         <div class="col-1"></div>
@@ -85,7 +85,7 @@
       <div class="row no-gutters justify-content-start" style="align-items: center">
 
         <div class="col-4">
-          <a class="btn btn-indigo darken-2 waves-light" id="button_add_choosen_to_card" mdbRippleRadius>{{ 'BUTTONS.ADD_PICTURES_TO_CARD' | translate }}</a>
+          <a class="btn btn-indigo darken-2 waves-light" id="button_add_choosen_to_card" (click)="addImagesToCart()" mdbRippleRadius>{{ 'BUTTONS.ADD_PICTURES_TO_CART' | translate }}</a>
         </div>
 
         <div class="col-4"></div>
@@ -114,7 +114,7 @@
         <div class="card-columns">
           <div *ngFor="let image of images; let i = index">
             <div class="card align-items-center" *ngIf="image.selected">
-              <img class="img-fluid" [src]="image.thumbnail" width="328" height="250" [alt]="image.name" div class="box1" (click)="openImageModal(image)">
+              <img class="img-fluid" [src]="image.thumbnail" width="328" height="250" [alt]="image.name" class="box1" (click)="openImageModal(image)">
             </div>
           </div>
         </div>
