Display photographers in users area
added method to only display photographers, if they are in the circle of the user (or user entered zip). circle = 10 kilometres

--- a/src/app/pages/photographer-search-page/photographer-search-page.component.html
+++ b/src/app/pages/photographer-search-page/photographer-search-page.component.html
@@ -6,55 +6,60 @@
         <label class="active">{{ 'TEXTS.SEARCH_PHOTOGRAPHER' | translate }}</label>
       </div>
       <div class="scrollable">
-        <div *ngFor="let p of (photographer | async)">
-          <div *ngIf="p.premium == true">
-            <a routerLink="/photographer/{{p.profileUrl}}">
-              <div class="card">
-                <div class="card-body">
-                  <p class="name">{{ p.name }}</p>
-                  <div class="content">
-                    <img class="profile-img" src="{{p.photoUrl}}">
-                    <div *ngIf="p.address" class="address">{{p.address.street}} {{p.address.streetnumber}}
-                      <br/> {{p.address.zip}} {{p.address.city}}
-                      <br/>
+        <div *ngIf="editedPhotographer.length; else noPhotographer">
+          <div *ngFor="let p of editedPhotographer">
+            <div *ngIf="p.premium == true">
+              <a routerLink="/photographer/{{p.profileUrl}}">
+                <div class="card">
+                  <div class="card-body">
+                    <p class="name">{{ p.name }}</p>
+                    <div class="content">
+                      <img class="profile-img" src="{{p.photoUrl}}">
+                      <div *ngIf="p.address" class="address">{{p.address.street}} {{p.address.streetnumber}}
+                        <br/> {{p.address.zip}} {{p.address.city}}
+                        <br/>
+                      </div>
+                    </div>
+                    <br/>
+                    <div class="distance">
+                      {{getPhotographerDistance(p) | number:'0.2-2' | replace:'.':','}} km
                     </div>
                   </div>
-                  <br/>
-                  <div class="distance">
-                    {{getPhotographerDistance(p) | number:'0.2-2' | replace:'.':','}} km
-                  </div>
                 </div>
-              </div>
-            </a>
+              </a>
+            </div>
           </div>
-        </div>
-        <hr class="mt-4 mb-4 border">
-        <div *ngFor="let p of (photographer | async)">
-          <div *ngIf="p.premium == false">
-            <a routerLink="/photographer/{{p.profileUrl}}">
-              <div class="card">
-                <div class="card-body">
-                  <p class="name">{{ p.name }}</p>
-                  <div>
-                    <div *ngIf="p.address" class="address">{{p.address.street}} {{p.address.streetnumber}}
-                      <br/> {{p.address.zip}} {{p.address.city}}
-                      <br/>
+          <hr *ngIf="hasBothProfiles" class="mt-4 mb-4 border">
+          <div *ngFor="let p of editedPhotographer">
+            <div *ngIf="p.premium == false">
+              <a routerLink="/photographer/{{p.profileUrl}}">
+                <div class="card">
+                  <div class="card-body">
+                    <p class="name">{{ p.name }}</p>
+                    <div>
+                      <div *ngIf="p.address" class="address">{{p.address.street}} {{p.address.streetnumber}}
+                        <br/> {{p.address.zip}} {{p.address.city}}
+                        <br/>
+                      </div>
+                    </div>
+                    <br/>
+                    <div class="distance">
+                      {{getPhotographerDistance(p) | number:'0.2-2' | replace:'.':','}} km
                     </div>
                   </div>
-                  <br/>
-                  <div class="distance">
-                    {{getPhotographerDistance(p) | number:'0.2-2' | replace:'.':','}} km
-                  </div>
                 </div>
-              </div>
-            </a>
+              </a>
+            </div>
           </div>
         </div>
+        <ng-template #noPhotographer>
+          <p>{{ 'TEXTS.NO_PHOTOGRAPHERS_FOUND' | translate}}</p>
+        </ng-template>
       </div>
     </div>
     <div class="col col-lg-8 text-center">
       <agm-map #map class="card mapformat">
-        <agm-marker *ngFor="let p of (photographer | async); let i = index" [latitude]="p.location.lat" [longitude]="p.location.lng"
+        <agm-marker *ngFor="let p of editedPhotographer; let i = index" [latitude]="p.location.lat" [longitude]="p.location.lng"
           [title]="p.name" [zIndex]="i">
           <agm-snazzy-info-window [maxWidth]="300" [closeWhenOthersOpen]="true" [maxHeight]="300">
             <ng-template>
@@ -67,9 +72,10 @@
                     <img *ngIf="p.premium == true" class="content-img" src="{{p.photoUrl}}">
                     <br/>
                   </div>
-                  {{ p.address.street }} {{p.address.streetnumber}}
-                  <br> {{ p.address.zip }} {{ p.address.city }}
-                  <br> Tel: {{ p.phone }}
+                  <span *ngIf="p.address.street">{{ p.address.street }} {{p.address.streetnumber}}
+                    <br> {{ p.address.zip }} {{ p.address.city }}</span>
+                  <br>
+                  <span *ngIf="p.phone">Tel: {{ p.phone }}</span>
                   <br>
                 </div>
                 <a routerLink="/photographer/{{p.profileUrl}}">Profile</a>
